# paranormle-web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  fly.toml  index.html
.github/workflows/: deploy.yml  fly-deploy.yml
.zed/: settings.json
api/: Cargo.toml
api/src/: episode_history.rs  lib.rs  main.rs
api/src/history/: firebase.rs  mod.rs  mysql.rs
common/: Cargo.toml
common/data/: episodes.json
common/src/: episode.rs  lib.rs
docs/: index.html  paranormle-6636989c3b078de1.js  paranormle-6636989c3b078de1_bg.wasm
docs/res/: style.css
docs/res/data/: episodes.json
res/: style.css
res/data/: episodes.json
scrapper/: main.py
src/: backgrond.rs  episode.rs  guesser.rs  lib.rs  main.rs  mist.rs  reset_countdown.rs  reset_counter.rs  theme.rs
src/guesser/: guess.rs  input.rs  mod.rs
web/: Cargo.toml  index.html
web/res/: style.css
web/src/: daily_episode.rs  lib.rs  main.rs  reset_countdown.rs  theme.rs
web/src/guesser/: guess.rs  info_piece.rs  input.rs  mod.rs
