[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
axum = "0.8.1"
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.28.2"
tower-http = { version = "0.6.2", features = ["cors"]}
common = { path = "../common" }
surrealdb = "2.2.1"
mysql = "26.0.0"
rand = "0.9.0"
